kubernetes/argocd/ingress/kubeshark-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeshark
  namespace: kubeshark
spec:
  ingressClassName: cilium
  rules:
    - host: kubeshark.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeshark-front
                port:
                  number: 80
